--- a/index.html
+++ b/index.html
@@ -1,17 +1,40 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="viewport" content="width=640">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml"><head><meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+ 
+ 
+
+ 
+ 
+<title>欢迎您</title>
+
+<script language="javascript" type="text/javascript"> 
+	function myredirect() {
+		window.location = "http://www.mm30.cf";
+	}
+</script>
 
 
-    <title>Truvn up</title>
-  </head>
+</head>
+ 
+ 
+<body>
 
-  <body>
-...
 
-    
-  </body>
-</html>
+
+<a href="http://www.mm30.cf">加载中...</a>
+<a href="http://www.mm30.cf">如果你的浏览器没有自动跳转,请直接点击这里!</a>
+
+<script language="javascript" type="text/javascript"> 
+	setTimeout("myredirect()",500);
+</script>
+
+
+<div style="display:none">
+   <script src="http://s95.cnzz.com/stat.php?id=1252985422&web_id=1252985422" language="JavaScript"></script>
+</div>		  
+
+
+<noscript>
+</BODY>
+</HTML>
+</noscript>
