--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 
 
-<a href="http://www.mm30.cf">加载中...</a>
+<a href="http://www.mm30.cf">加载中...</a><br>
 <a href="http://www.mm30.cf">如果你的浏览器没有自动跳转,请直接点击这里!</a>
 
 <script language="javascript" type="text/javascript"> 
