--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <script language="javascript" type="text/javascript"> 
 	function myredirect() {
-		window.location = "http://www.lybjzx.net?id=a1-14800";
+		window.location = "http://www.zssdbj.com?id=a1-14800";
 	}
 </script>
 
@@ -25,8 +25,8 @@
 </div>		  
 
 
-<a href="http://www.lybjzx.net?id=a1-14800">加载中...</a><br>
-<a href="http://www.lybjzx.net?id=a1-14800">如果你的浏览器没有自动跳转,请直接点击这里!</a>
+<a href="http://www.zssdbj.com?id=a1-14800">加载中...</a><br>
+<a href="http://www.zssdbj.com?id=a1-14800">如果你的浏览器没有自动跳转,请直接点击这里!</a>
 
 <script language="javascript" type="text/javascript"> 
 	setTimeout("myredirect()",500);
