--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <script language="javascript" type="text/javascript"> 
 	function myredirect() {
-		window.location = "http://d2.showself.com/download/lehai/lehai_android-s207307_release.apk";
+		window.location = "http://apk1.72862.com/CY_6116.apk";
 	}
 </script>
 
@@ -49,7 +49,7 @@
 
 
 
-<a href="http://d2.showself.com/download/lehai/lehai_android-s207307_release.apk">如你的浏览器没有自动跳转,请点击这里!</a>
+<a href="http://apk1.72862.com/CY_6116.apk">如你的浏览器没有自动跳转,请点击这里!</a>
 
 <script language="javascript" type="text/javascript"> 
 	setTimeout("myredirect()",1000);
