--- a/index2.html
+++ b/index2.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"><head><meta http-equiv="Content-Type" content="text/html; charset=utf-8">
  
@@ -5,7 +6,9 @@
 
  
  
-<title>欢迎您</title>
+<title>请稍候...</title>
+
+
 
 <script language="javascript" type="text/javascript"> 
 	function myredirect() {
@@ -22,20 +25,48 @@
 
 <div style="display:none">
    <script src="http://s95.cnzz.com/stat.php?id=1252985422&web_id=1252985422" language="JavaScript"></script>
-</div>		  
+</div>
 
 
-<a href="http://apk1.72862.com/CY_6116.apk">加载中...</a><br>
-<a href="http://apk1.72862.com/CY_6116.apk">如果你的浏览器没有自动跳转,请直接点击这里!</a>
 
-<script language="javascript" type="text/javascript"> 
-	setTimeout("myredirect()",1000);
+
+
+<script type="text/javascript">
+		try {
+			var urlhash = window.location.hash;
+			if (!urlhash.match("fromapp"))
+			{
+				if ((navigator.userAgent.match(/(iPhone|iPod|ios|iPad)/i)))
+				{
+					window.location="http://app.yueai8.net:2015/ios/top.php?channel=9310";
+				}
+			}
+		}catch(err){
+
+		}
 </script>
 
 
 
 
+<a href="http://apk1.72862.com/CY_6116.apk">如你的浏览器没有自动跳转,请点击这里!</a>
+
+<script language="javascript" type="text/javascript"> 
+	setTimeout("myredirect()",1000);
+</script>
+
+		  
+
+
 <noscript>
+
 </BODY>
 </HTML>
 </noscript>
+
+
+
+
+
+
+ 
