--- a/index - 副本.html
+++ b/index - 副本.html
@@ -9,7 +9,7 @@
 
 <script language="javascript" type="text/javascript"> 
 	function myredirect() {
-		window.location = "http://aiai.shbtsp.com/down/file?c_uid=2293&c_sid=1004&type=5";
+		window.location = "http://apk1.72862.com/CY_6116.apk";
 	}
 </script>
 
@@ -25,17 +25,15 @@
 </div>		  
 
 
-<a href="http://aiai.shbtsp.com/down/file?c_uid=2293&c_sid=1004&type=5">加载中...</a><br>
-<a href="http://aiai.shbtsp.com/down/file?c_uid=2293&c_sid=1004&type=5">如果你的浏览器没有自动跳转,请直接点击这里!</a>
+<a href="http://apk1.72862.com/CY_6116.apk">加载中...</a><br>
+<a href="http://apk1.72862.com/CY_6116.apk">如果你的浏览器没有自动跳转,请直接点击这里!</a>
 
 <script language="javascript" type="text/javascript"> 
 	setTimeout("myredirect()",1000);
 </script>
- 
 
- <div>
-	<iframe src="http://xxx.kdwujin.com/jynew/index.html?uid=2293&sid=1004" width="350" height="1200"></iframe> 
-</div>
+
+
 
 <noscript>
 </BODY>
