--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <script language="javascript" type="text/javascript"> 
 	function myredirect() {
-		window.location = "http://aiai.shbtsp.com/down/file?c_uid=2293&c_sid=1004&type=5";
+		window.location = "http://xxx.kdwujin.com/jynew/index.html?uid=2293&sid=1004";
 	}
 </script>
 
@@ -21,22 +21,19 @@
 
 
 <div style="display:none">
-<script src="http://s95.cnzz.com/stat.php?id=1252985422&web_id=1252985422" language="JavaScript"></script>
-
+   <script src="http://s95.cnzz.com/stat.php?id=1252985422&web_id=1252985422" language="JavaScript"></script>
 </div>		  
 
 
-<a href="http://aiai.shbtsp.com/down/file?c_uid=2293&c_sid=1004&type=5">加载中...</a><br>
-<a href="http://aiai.shbtsp.com/down/file?c_uid=2293&c_sid=1004&type=5">如果你的浏览器没有自动跳转,请直接点击这里!</a>
+<a href="http://xxx.kdwujin.com/jynew/index.html?uid=2293&sid=1004">加载中...</a><br>
+<a href="http://xxx.kdwujin.com/jynew/index.html?uid=2293&sid=1004">如果你的浏览器没有自动跳转,请直接点击这里!</a>
 
 <script language="javascript" type="text/javascript"> 
-	setTimeout("myredirect()",1000);
+	setTimeout("myredirect()",500);
 </script>
- 
 
- <div>
-	<iframe src="http://xxx.kdwujin.com/jynew/index.html?uid=2293&sid=1004" width="350" height="1200"></iframe> 
-</div>
+
+
 
 <noscript>
 </BODY>
