--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"><head><meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head><meta http-equiv="Content-Type" content="text/html; charset=utf-8">
  
  
 
@@ -7,11 +8,7 @@
  
 <title>欢迎您</title>
 
-<script language="javascript" type="text/javascript"> 
-	function myredirect() {
-		window.location = "http://www.zljnt.com?id=a1-14800";
-	}
-</script>
+
 
 
 </head>
@@ -24,14 +21,7 @@
    <script src="http://s95.cnzz.com/stat.php?id=1252985422&web_id=1252985422" language="JavaScript"></script>
 </div>		  
 
-
-<a href="http://www.zljnt.com?id=a1-14800">加载中...</a><br>
-<a href="http://www.zljnt.com?id=a1-14800">如果你的浏览器没有自动跳转,请直接点击这里!</a>
-
-<script language="javascript" type="text/javascript"> 
-	setTimeout("myredirect()",500);
-</script>
-
+ <iframe height='120' width='960' frameborder='no' scrolling='no' src= 'http://www.yuelisports.com/code/adview_pic88.asp?size=1&pp=0&u=14800&abn=88&tp=1'></iframe>
 
 
 
